--- a/miniApp/index.html
+++ b/miniApp/index.html
@@ -17,6 +17,7 @@
         <div id="animate"></div>
     </div>
     
+    <div id="msg"></div>
     <script src="js/scripts.js"></script>
 </body>
 
